# ntfs_study

./: CMakeLists.txt  attribute.c  attribute.h  file_record.c  file_record.h  main.c  routines.c  routines.h  vbr.c  vbr.h
fat/: bpb.py  fat.py  mount.sh  test.py  unmount.sh
